# codex-orchestrator

./: .env.example  .gitignore  AGENTS.md  README.md  conf.toml.example  pyproject.toml
apps/orchestrator/: README.md  package-lock.json  package.json  tsconfig.json
apps/orchestrator/src/: index.ts
apps/orchestrator/src/config/: env.ts
apps/orchestrator/src/mcp/: client.ts  types.ts
apps/orchestrator/src/state/: atomicWrite.ts  jobStore.ts  lock.ts  logStore.ts  sessionStore.ts
apps/orchestrator/src/state/__tests__/: atomicWrite.test.ts  lock.test.ts  sessionStore.test.ts
apps/orchestrator/src/telegram/: bot.ts  commands.ts
apps/orchestrator/src/utils/: text.ts  time.ts
docs/: design.md  linux-telegram-codex-mcp-server-guide.md  plan_mode_round_flow.md  telegram-codex-agents-sdk-design.md  telegram-integration-runbook.md  usage-single-mode.md
docs/plans/: 20260221-single-mode-priority.md
docs/progress/: git-commit-commands.sh  git-commit-scope.md  git-commit-validation.md
scripts/: telegram_polling_runner.py
src/: main.py
src/bot/: telegram_adapter.py
src/codex_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/core/: command_router.py  models.py  orchestrator.py  profiles.py  session_manager.py  trace_logger.py
src/integrations/: codex_executor.py  codex_mcp.py
src/workflows/: agent_factory.py  multi_agent_workflow.py  plan_agent_workflow.py  plan_workflow.py  single_agent_workflow.py  types.py
tests/: test_codex_executor.py  test_codex_mcp.py  test_command_router.py  test_main.py  test_multi_agent_workflow.py  test_orchestrator.py  test_plan_workflow.py  test_profiles.py  test_session_and_trace.py  test_single_agent_workflow.py  test_telegram_polling_runner.py
