[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex_orchestrator"
version = "0.2.2"
description = "Telegram orchestrator for running Codex single/plan-agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "mcp",
  "python-dotenv",
  "tomli; python_version < \"3.11\"",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Communications :: Chat",
]
keywords = [
  "codex",
  "telegram",
  "orchestrator",
  "mcp",
  "agent",
  "vibe coding",
  "codex cli",
  "codex mcp-server",
]

[project.scripts]
codex-orchestrator = "scripts.telegram_polling_runner:main"

[tool.setuptools]
packages = ["bot", "core", "integrations", "workflows", "scripts"]
py-modules = ["main"]

[tool.setuptools.package-dir]
bot = "src/bot"
core = "src/core"
integrations = "src/integrations"
workflows = "src/workflows"
scripts = "scripts"
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
